--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/rrweb/dist/rrweb.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/rrweb/dist/rrweb.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -119,6 +122,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "onlinecoding"
+    }
+  },
+  "defaultProject": "onlinecoding",
+  "cli": {
+    "analytics": false
+  }
 }
